Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73810

qtbase\src\tools\androiddeployqt\main.cpp(73): error C3861: 'popen': identifier not found

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.12.2, 5.12.3, 5.14.0 Alpha
    • 5.12.1
    • Build tools: Other
    • None
    • Windows 10 (1809)
      VS 2017 (15.9)
      cl 19.16.27026.1 for x86
    • Windows
    • 55e31e6389c78218f1f9039a4bf642db68a86975 (qt/qtbase/5.12)

      log
      pushd C:\Dev\Libs\Qt5\build\android-arm\qtbase\src\tools\androiddeployqt
      
      jom -f Makefile.Release
      
      jom 1.1.3 - empower your cores
      
              cl -c -nologo -Zc:wchar_t -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:__cplusplus -U__STRICT_ANSI__ -O2 -MD -utf-8 /wd4530 /wd4577 -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 -DUNICODE -D_UNICODE -DWIN32 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR="\"5.12.1\"" -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=12 -DQT_VERSION_PATCH=1 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -DNDEBUG -IC:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt -I. -I..\..\..\include -I..\..\..\include\QtCore -I..\..\..\include\QtCore\5.12.1 -I..\..\..\include\QtCore\5.12.1\QtCore -I..\..\..\include\QtXml -I..\..\..\include\QtXml\5.12.1 -I..\..\..\include\QtXml\5.12.1\QtXml -IC:\Dev\Libs\Qt5\src\qtbase\mkspecs\win32-msvc -Fo.obj\release\ @C:\Temp\main.obj.12800.15.jom
      main.cpp
              rc /NOLOGO -DUNICODE -D_UNICODE -DWIN32 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR="\"5.12.1\"" -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=12 -DQT_VERSION_PATCH=1 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -DNDEBUG -fo .obj\release\androiddeployqt_resource.res androiddeployqt_resource.rc
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(73): error C3861: 'popen': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(1612): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(1698): error C3861: 'popen': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(1893): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2119): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2135): error C3861: 'popen': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2141): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2208): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2333): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2372): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2438): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2546): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2586): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2641): error C3861: 'pclose': identifier not found
      C:\Dev\Libs\Qt5\src\qtbase\src\tools\androiddeployqt\main.cpp(2678): error C3861: 'pclose': identifier not found
      jom: C:\Dev\Libs\Qt5\build\android-arm\qtbase\src\tools\androiddeployqt\Makefile.Release [.obj\release\main.obj] Error 2
      

        1. config.log
          137 kB
        2. config.opt
          0.5 kB
        3. config.summary
          9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Eddy Edward Welbourne
            dmitry.sokolov Dmitry Sokolov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes